package com.kate_chaus.art_orders.repos;

import com.kate_chaus.art_orders.domain.Site;
import org.springframework.data.repository.CrudRepository;

public interface SiteRepo extends CrudRepository<Site, Long> {

}
